testing/framework/resources/Advanced/Failing/mondrian/query6085.q
select network.network_id as c0, network.network_name as c1, line_class.line_class_id as c2, line_class.line_class_name as c3 from line as line, line_line_class as line_line_class, line_class as line_class, line_class_network as line_class_network, network as network where line_class_network.network_id = network.network_id and line_class.line_class_id = line_class_network.line_class_id and line_line_class.line_class_id = line_class.line_class_id and line.line_id = line_line_class.line_id group by network.network_id, network.network_name, line_class.line_class_id, line_class.line_class_name order by network.network_id ASC NULLS LAST, line_class.line_class_id ASC NULLS LAST;
